--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
         <artifactId>extentreports</artifactId>
         <version>5.0.9</version> 
     </dependency>
+    <dependency>
+	  <groupId>org.thymeleaf</groupId>
+	  <artifactId>thymeleaf</artifactId>
+	  <version>3.1.2.RELEASE</version>
+	</dependency>
   </dependencies>
 
   <build>
