Vuelvo a modificar el gitignore para que no tome las carpetas/archivos de compilacion

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,28 @@
 /target/
-.mvn/
+**/.mvn/
 !.mvn/wrapper/maven-wrapper.jar
-.m2/
-.project
-.classpath
-.settings/
-*.log
-/test-output/
-/output/
-/reports/
-/screenshots/
-*.swp
-.DS_Store
-Thumbs.db
-hs_err_pid*
-*.class
+**/.m2/
+**/.project
+**/.classpath
+**/.settings/
+**/*.log
+**/test-output/
+**/output/
+**/reports/
+**/screenshots/
+**/*.swp
+**/.DS_Store
+**/Thumbs.db
+**/hs_err_pid*
+**/*.class
+**/bin/
+**/releases/
+**/maven/
+**/build/
+**/repository/
+**/img/
+**/dependencies/
+**/out.txt
+**/pom.xml.versionsBackup
+**/test-results/
+**/secret.txt
